apps/satmonitor/base/ingress/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-login-prefix
  namespace: satmonitor-dev
spec:
  stripPrefix:
    prefixes:
      - /login-service
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-job-prefix
  namespace: satmonitor-dev
spec:
  stripPrefix:
    prefixes:
      - /job-service
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: satmonitor-dev
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      - PATCH
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - Accept
      - Origin
      - X-Requested-With
      - userid
    accessControlAllowOriginList:
      - "https://app.satmonitor.cloud"
      - "http://app.satmonitor.cloud"
      - "http://localhost:3000"
      - "http://localhost:4200"
    accessControlExposeHeaders:
      - Set-Cookie
      - Authorization
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
