apps/satmonitor/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satmonitor-app
  namespace: satmonitor-dev
  labels:
    app.kubernetes.io/name: satmonitor-ingress
    app.kubernetes.io/part-of: satmonitor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: satmonitor-dev-cors@kubernetescrd,satmonitor-dev-strip-login-prefix@kubernetescrd,satmonitor-dev-strip-job-prefix@kubernetescrd
spec:
  ingressClassName: traefik

  rules:
    # Frontend — app.satmonitor.cloud
    - host: app.satmonitor.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: satmonitor-frontend
                port:
                  number: 80

    # API — api.satmonitor.cloud (path-based split with prefix stripping)
    - host: api.satmonitor.cloud
      http:
        paths:
          - path: /login-service
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 8087

          - path: /job-service
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 8088
